// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenRequest: reducer close modal 1`] = `
Object {
  "isTokenOpen": false,
}
`;

exports[`TokenRequest: reducer open modal 1`] = `
Object {
  "isTokenOpen": true,
}
`;

exports[`TokenRequest: reducer set initial state 1`] = `
Object {
  "isTokenOpen": false,
}
`;
